--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<div style="background-color:antiquewhite; width:70%"></div>
+	<div style="background-color:antiquewhite; width:70%">
 	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
 	<h2>Roman(로마서) 8:38-39</h2>
 	<ol>
@@ -15,7 +15,7 @@
 	</ol>
 
 
-<h2>Originated Rate of Bible Translation</h2>
+<!-- <h2>Originated Rate of Bible Translation</h2>
 
 <table style="font-style:italic;">
 	<tr>   
@@ -30,6 +30,6 @@
 		<td>ESV</td>
 		<td>93%</td>
 	</tr>
-</table>
+</table> -->
 </body>
 </html>
