add home link on all pages

--- a/3.html
+++ b/3.html
@@ -5,11 +5,12 @@
 	<meta charset="utf-8">
 </head>
 <body>
-<h1>Bible(ESV)</h1>
-<h2>New Testament</h2>
-<h3>Roman 8:38-39</h3>
-<span style="font-size:14px;"><p>38.For <strong>I</strong> am sure that neither death nor life, nor angels nor rulers,<br> nor things present nor things to come, nor powers,</p>
-<p style="margin-top:20px;">39.nor height nor depth, nor anything else in all creation, will be able to separate us<br> from <strong>the love of God in Christ Jesus our Lord</strong>.</p></span>
-<img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%">
+	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
+	<h2>Bible(ESV)</h2>
+	<h3>New Testament</h3>
+	<h4>Roman 8:38-39</h4>
+	<span style="font-size:14px;"><p>38.For <strong>I</strong> am sure that neither death nor life, nor angels nor rulers,<br> nor things present nor things to come, nor powers,</p>
+	<p style="margin-top:20px;">39.nor height nor depth, nor anything else in all creation, will be able to separate us<br> from <strong>the love of God in Christ Jesus our Lord</strong>.</p></span>
+	<img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%">
 </body>
 </html>
