--- a/2.html
+++ b/2.html
@@ -3,14 +3,136 @@
 <head>
 	<title>Bible(새번역)</title>
 	<meta charset="utf-8">
+	<style>
+		body {
+			margin:0px;
+		}
+		
+		a {
+			color: black;
+			text-decoration: none;
+		/* }
+		.saw {
+			color:gray; */
+		}
+		#current {
+			color: red;
+			
+		}
+		h1::before {  
+			transform: scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 20%;
+		}
+
+		h1:hover::before {
+			transform: scaleX(1);
+			transform-origin: bottom left;
+		}
+		h1::before {
+			content: " ";
+			display: block;
+			position: absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background: rgb(214, 166, 94);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+		h1 {
+			font-size: 24px;
+			text-align: center;
+			font-family:Verdana, Geneva, Tahoma, sans-serif;
+			/* border-bottom:2px solid grey; */
+			margin:0px;
+			padding: 35px;
+			position: relative;
+		}
+		h3, h4 {
+			text-align: center;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 24px
+		}
+		li::before {  
+			transform:scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 40%;
+		}
+
+		li:hover::before {
+			transform:scaleX(1);
+			transform-origin: bottom left;
+		}
+		li::before {
+			content: " ";
+			display: block; width: 130px;
+			position:absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background: rgb(206, 234, 174);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+
+		li {
+			position: relative;
+		
+		}
+		
+		#grid {
+			/* border: 2px solid grey; */
+			display:grid;
+			grid-template-columns: 1fr 1fr 2fr;
+			
+		}
+		#grid ol {
+			font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+			font-size: 22px;
+			/* border-right: 2px solid grey;
+			width: 140px;
+			margin:0px; */
+			/*padding-top: 15px;
+			padding-bottom: 15px;*/
+			padding-left: 50px; 
+			}
+		#grid p {
+			font-size: 18px;
+		}
+		#grid div {
+            border: 2px ridge gray;  
+			border-bottom: 0px;
+			border-top: 2px ridge gray;
+			border-right: 0px;
+			border-radius: 20%;
+		}
+		@media(max-width:750px) {
+			#grid {border:none; display: block;}
+			#grid div {border-top:none;}	
+		}
+	</style>
 </head>
 <body>
+	
 	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
-	<h2>Bible(새번역)</h2>
-	<h3>신약성경</h3>
-	<h4>로마서 8:38-39</h4>
-	<span style="font-size:16px;" ><p>38.<strong>나는 확신합니다</strong>. 죽음도, 삶도, 천사들도, 권세자들도, 현재 일도, 장래 일도, 능력도,</p>
-	<p style="margin-top:20px;">39.높음도, 깊음도, 그 밖에 어떤 피조물도,<br> 우리를 우리 주 <strong>예수 그리스도 안에 있는 하나님의 사랑</strong>에서 끊을 수 없습니다.</p></span>
-	<img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%">
+	<div id="grid">
+		<div>
+		<ol>
+			<li><a href="1.html">BIBLE(NIV)</a></li>
+			<li><a href="2.html" id="current">BIBLE(새번역)</a></li>
+			<li><a href="3.html">BIBLE(ESV)</a></li>
+		</ol>
+		</div>
+		<!-- <h2 style="color:rgb(24, 182, 24); font-family:'korean', 'Gothic Medium', 'Arial Narrow', Arial, sans-serif">Bible(새번역)</h2> -->
+		<div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+			<h3>신약성경</h3>
+			<h4 style="font-size:20px;">로마서 8:38-39</h4>
+		</div>
+		<div style="padding-left:25px;">
+			<p>38.<strong>나는 확신합니다</strong>. 죽음도, 삶도, 천사들도, 권세자들도, 현재 일도, 장래 일도,능력도,</p>
+			<p style="margin-top:10px;">39.높음도, 깊음도, 그 밖에 어떤 피조물도,우리를 우리 주 <strong>예수 그리스도 안에 있는 하나님의 사랑</strong>에서 끊을 수 없습니다.</p>
+				<!-- <img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%"> -->
+			
+		</div>
+	</div>
 </body>
 </html>
