--- a/3.html
+++ b/3.html
@@ -1,16 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Bible(ESV)</title>
 	<meta charset="utf-8">
+	<style>
+		body {
+			margin:0px;
+		}
+		
+		a {
+			color: black;
+			text-decoration: none;
+		}
+		/* .saw {
+			color:gray;
+		} */
+		#current {
+			color: red;
+			
+		}
+		h1::before {  
+			transform: scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 20%;
+		}
+
+		h1:hover::before {
+			transform: scaleX(1);
+			transform-origin: bottom left;
+		}
+		h1::before {
+			content: " ";
+			display: block;
+			position: absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background: rgb(214, 166, 94);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+		h1 {
+			font-size: 24px;
+			text-align: center;
+			font-family:Verdana, Geneva, Tahoma, sans-serif;
+			/* border-bottom:2px solid grey; */
+			margin:0px;
+			padding: 35px;
+			position: relative;
+		}
+		h3, h4 {
+			text-align: center;
+			font-family: Arial, Helvetica, sans-serif;
+			font-size: 24px
+		}
+		li::before {  
+			transform:scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 40%;
+		}
+
+		li:hover::before {
+			transform:scaleX(1);
+			transform-origin: bottom left;
+		}
+		li::before {
+			content: " ";
+			display: block; width: 130px;
+			position:absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background: rgb(206, 234, 174);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+
+		li {
+			position: relative;
+		
+		}
+		
+		#grid {
+			/* border: 2px solid grey; */
+			display:grid;
+			grid-template-columns: 1fr 1fr 2fr;
+			
+		}
+		#grid p {
+			font-size: 18px;
+		}
+		#grid div {
+            border: 1px ridge gray;  
+			border-bottom: 0px;
+			border-top: 2px ridge gray;
+			border-right: 0px;
+			border-radius: 20%;
+		}
+		#grid ol {
+			font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+			font-size: 22px;
+			/* border-right: 2px solid grey;
+			width: 140px;
+			margin:0px; */
+			/*padding-top: 15px;
+			padding-bottom: 15px;*/
+			padding-left: 50px; 
+			}
+		@media(max-width:750px) {
+			#grid {border:none; display: block;}
+			#grid div {border-top:none;}	
+		}
+		
+	</style>
 </head>
 <body>
+	
 	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
-	<h2>Bible(ESV)</h2>
-	<h3>New Testament</h3>
-	<h4>Roman 8:38-39</h4>
-	<span style="font-size:14px;"><p>38.For <strong>I</strong> am sure that neither death nor life, nor angels nor rulers,<br> nor things present nor things to come, nor powers,</p>
-	<p style="margin-top:20px;">39.nor height nor depth, nor anything else in all creation, will be able to separate us<br> from <strong>the love of God in Christ Jesus our Lord</strong>.</p></span>
-	<img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%">
+	<div id = grid>
+		<div>
+			<ol>
+				<li><a href="1.html">BIBLE(NIV)</a></li>
+				<li><a href="2.html">BIBLE(새번역)</a></li>
+				<li><a href="3.html" id="current">BIBLE(ESV)</a></li>
+			</ol>
+		</div>
+			<!-- <h2 style="color:rgb(24, 182, 24); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Bible(ESV)</h2> -->
+		<div style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+			<h3>New Testament</h3>
+			<h4 style="font-size:20px;">Roman 8:38-39</h4>
+		</div>
+		<div style="padding-left:25px;">
+			<p>38.For <strong>I</strong> am sure that neither death nor life, nor angels nor rulers, nor things present nor things to come, nor powers,</p>
+			<p style="margin-top:10px;">39.nor height nor depth, nor anything else in all creation, will be able to separate us from <strong>the love of God in Christ Jesus our Lord</strong>.</p>
+			<!-- <img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%"> -->
+		</div>
+	</div>
 </body>
 </html>
