--- a/index.html
+++ b/index.html
@@ -3,16 +3,121 @@
 <head>
 	<title>Various Version of Bible Verse</title>
 	<meta charset="utf-8">
+	<style>
+		a {
+			text-decoration: none;
+			
+		}
+		h1::before {  
+			transform: scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 20%;
+		}
+
+		h1:hover::before {
+			transform: scaleX(1);
+			transform-origin: bottom left;
+		}
+		h1::before {
+			content: " ";
+			display:block;
+			position: absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background:40px rgb(214, 166, 94);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+
+		li::before {  
+			transform:scaleX(0);
+			transform-origin: bottom right;
+			border-radius: 40%;
+
+		}
+
+		li:hover::before {
+			transform:scaleX(1);
+			transform-origin: bottom left;
+		}
+		li::before {
+			content: " ";
+			display: block; width: 140px;
+			position:absolute;
+			top: 0; right: 0; bottom: 0; left: 0;
+			inset: 0 0 0 0;
+			background: rgb(206, 234, 174);
+			z-index: -1;
+			transition: transform .3s ease;
+		}
+
+		li {
+			position: relative;
+		
+		}
+		h1 {
+			font-size: 40px;
+			text-align: center;
+			font-family:Verdana, Geneva, Tahoma, sans-serif;
+			border-bottom:5px groove goldenrod;
+			border-radius: 30%;
+			margin-bottom: none; padding-bottom: 15px;
+			position: relative;
+		}
+		h2 {
+			font-size: 36px;
+			text-align: center; color:bisque;
+			text-shadow: 2px 2px 5px goldenrod;
+			/* text-decoration-line: underline;
+			text-decoration-style: wavy;  */
+			font-family: Verdana, Geneva, Tahoma, sans-serif;
+			margin-top: 0px; padding-top: 0px;
+			background-image: url("aaron-burden-535Npq1wFG8-unsplash2.jpg");
+		
+		}
+		ol {
+			font-size: 24px;
+			text-align:left;
+			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+				
+		}
+		
+		
+		/* img {
+			img: center;
+		} */
+		@media(max-width:750px) {
+			h1 {font-size: 25px;} 
+			h2 {font-size: 18px;}
+			ol {font-size: 16px;}
+			img {width: 70%; padding-left: 75px;}
+		}
+		
+		
+
+	</style>
 </head>
 <body>
-	<div style="background-color:antiquewhite; width:70%">
-	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
+	<!-- <div style="background-color:antiquewhite; width:70%; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;"> -->
+	<h1><a href="index.html" style="color:black;">Various Version of Bible Verse</a></h1>
 	<h2>Roman(로마서) 8:38-39</h2>
-	<ol>
+	<div>
+	<ol style="border: 5px outset goldenrod; width: 150px; border-radius:20%;">
 		<li><a href="1.html">BIBLE(NIV)</a></li>
   		<li><a href="2.html">BIBLE(새번역)</a></li>
   		<li><a href="3.html">BIBLE(ESV)</a></li>
 	</ol>
+	<img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="100%">
+
+
+	<!-- <div style="background-color:antiquewhite; width:70%; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;">
+		<h1><a href="index.html"><font color="black">Various Version of Bible Verse</font></a></h1>
+		<h2><font color="green">Roman(로마서) 8:38-39</font></h2>
+		<ol>
+			<li><a href="1.html"><font color="gray">BIBLE(NIV)</font></a></li>
+			  <li><a href="2.html"><font color="gray">BIBLE(새번역)</font></a></li>
+			  <li><a href="3.html"><font color="gray">BIBLE(ESV)</font></a></li>
+		</ol> -->
 
 
 <!-- <h2>Originated Rate of Bible Translation</h2>
