--- a/3.html
+++ b/3.html
@@ -43,7 +43,8 @@
 			font-size: 24px;
 			text-align: center;
 			font-family:Verdana, Geneva, Tahoma, sans-serif;
-			/* border-bottom:2px solid grey; */
+			border-bottom:2px solid grey;
+			border-radius: 20%;
 			margin:0px;
 			padding: 35px;
 			position: relative;
