--- a/1.html
+++ b/1.html
@@ -3,123 +3,13 @@
 <head>
 	<title>Bible(NIV)</title>
 	<meta charset="utf-8">
-	<style>
-		body {
-			margin:0px;
-		}
-		
-		a {
-			color: black;
-			text-decoration: none;
-		/* }
-		.saw {
-			color:gray; */
-		}
-		#current {
-			color: red;
-			
-		}
-		h1::before {  
-			transform: scaleX(0);
-			transform-origin: bottom right;
-			border-radius: 20%;
-		}
-
-		h1:hover::before {
-			transform: scaleX(1);
-			transform-origin: bottom left;
-		}
-		h1::before {
-			content: " ";
-			display: block;
-			position: absolute;
-			top: 0; right: 0; bottom: 0; left: 0;
-			inset: 0 0 0 0;
-			background: rgb(214, 166, 94);
-			z-index: -1;
-			transition: transform .3s ease;
-		}
-
-		h1 {
-			font-size: 24px;
-			text-align: center;
-			font-family:Verdana, Geneva, Tahoma, sans-serif;
-			border-bottom:2px solid grey;
-			border-radius: 20%;
-			margin:0px;
-			padding: 35px;
-			position: relative;
-		}
-		h3, h4 {
-			text-align: center;
-			font-family: Arial, Helvetica, sans-serif;
-			font-size: 24px
-	
-		}
-		li::before {  
-			transform:scaleX(0);
-			transform-origin: bottom right;
-			border-radius: 40%;
-		}
-
-		li:hover::before {
-			transform:scaleX(1);
-			transform-origin: bottom left;
-		}
-		li::before {
-			content: " ";
-			display: block; width: 130px;
-			position:absolute;
-			top: 0; right: 0; bottom: 0; left: 0;
-			inset: 0 0 0 0;
-			background: rgb(206, 234, 174);
-			z-index: -1;
-			transition: transform .3s ease;
-		}
-
-		li {
-			position: relative;
-		
-		}
-		#grid {
-			/* border: 2px solid grey; */
-			display:grid;
-			grid-template-columns: 1fr 1fr 2fr;
-			
-		}
-		#grid p {
-			font-size: 18px;
-		}
-		#grid ol {
-			font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-			font-size: 22px;
-			/* border-right: 2px solid grey;
-			width: 140px;
-			margin:0px; */
-			/*padding-top: 15px;
-			padding-bottom: 15px;*/
-			padding-left: 50px; 
-			}
-		
-		#grid div {
-            border-left: 2px ridge gray;  
-			border-bottom: 0px;
-			border-top: 2px ridge gray;
-			border-right: 0px;
-			border-radius: 20%;
-
-		}
-		@media(max-width:750px) {
-			#grid {border:none; display: block;}
-			#grid div {border-top:none;}	
-		}
-	
-	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1><a href="index.html">Various Version of Bible Verse</a></h1>
 	<div id = grid>
-		<div style = "border-left:0px;">
+		<div>
 			<ol>
 				<li><a href="1.html" id="current">BIBLE(NIV)</a></li>
 				<li><a href="2.html">BIBLE(새번역)</a></li>
@@ -129,12 +19,12 @@
 		<!-- <h2 style="color:rgb(24, 182, 24); font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Bible(NIV)</h2> -->
 		<div>
 			<h3>New Testament</h3>
-			<h4 style="font-size:20px;">Roman 8:38-39</h4>
+			<h4 style="font-size:20px;">Romans 8:38-39</h4>
 		</div>
 		<div style="padding-left:25px;">	
 			<p>38.For <strong>I</strong> am convinced that neither death nor life, neither angels nor demons, neither the present nor the future, nor any powers,
 	neither height nor depth,</p>
-			<p style="margin-top:10px;">39.nor anything else in all creation, will be able to separate us from <strong>the love of <u>God</u></strong> that is in Christ Jesus our Lord.</p>
+			<p style="margin-top:10px;">39.nor anything else in all creation, will be able to separate us from <strong>the love of <u>God</u></strong> that is in Christ Jesus our Lord<a href="https://www.biblegateway.com/passage/?search=Romans%208&version=NIV">(Read Whole Chapter)</a>.</p>
 		</div>
 			<!-- <img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%"> -->
 	</div>
