--- a/2.html
+++ b/2.html
@@ -24,7 +24,7 @@
 		</div>
 		<div style="padding-left:25px;">
 			<p>38.<strong>나는 확신합니다</strong>. 죽음도, 삶도, 천사들도, 권세자들도, 현재 일도, 장래 일도,능력도,</p>
-			<p style="margin-top:10px;">39.높음도, 깊음도, 그 밖에 어떤 피조물도,우리를 우리 주 <strong>예수 그리스도 안에 있는 하나님의 사랑</strong>에서 끊을 수 없습니다<a href="http://www.holybible.or.kr/B_SAENEW/cgi/bibleftxt.php?VR=2&CI=11528&CV=99">(8장 전체 읽기)</a>.</p>
+			<p style="margin-top:10px;">39.높음도, 깊음도, 그 밖에 어떤 피조물도,우리를 우리 주 <strong>예수 그리스도 안에 있는 하나님의 사랑</strong>에서 끊을 수 없습니다<a href="http://www.holybible.or.kr/B_SAENEW/cgi/bibleftxt.php?VR=SAENEW&VL=45&CN=8&CV=99">(8장 전체 읽기)</a>.</p>
 				<!-- <img src="aaron-burden-535Npq1wFG8-unsplash.jpg" width="70%"> -->
 			
 		</div>
