--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 		li::before {  
 			transform:scaleY(0);
 			transform-origin: bottom right;
-			border-radius: 40%;
+			border-top-right-radius: 40%;
+			border-bottom-right-radius: 40%;
 
 		}
 
@@ -121,7 +122,7 @@
 	<h1><a href="index.html">Little Light Ministries</a></h1>
 	<h2>Romans(로마서) 8:38-39</h2>
 	<div>
-	<ol style="border: 5px outset goldenrod; width: 150px; border-radius:20%;">
+	<ol style="border: 5px outset goldenrod; width: 170px; border-radius:20%;">
 		<li><a href="1.html">BIBLE(NIV)</a></li>
   		<li><a href="2.html">BIBLE(새번역)</a></li>
   		<li><a href="3.html">BIBLE(ESV)</a></li>
